<resources>
    <string name="app_name">Travel mate</string>
    <string name="logout">Logout</string>
    <string name="about_us">About us</string>
    <string name="other">Other</string>
    <string name="category">Category</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="choose_user_type">Who are you?</string>
    <string name="title_activity_map_page">map_page</string>
    <string name="header">header</string>
    <string name="full_name">full name</string>
    <string name="password">Password</string>
    <string name="new_password">new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="next">Next</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="_01_01_20022">01-01-20022</string>
    <string name="address">Address</string>
    <string name="profile_pic">Profile pic</string>
    <string name="optional">(optional)</string>
    <string name="save">Submit</string>
    <string name="mobile_number">Mobile number</string>
    <string name="this_field_cant_be_empty">this field can\'t be empty</string>
    <string name="wrong_email_password">wrong email/password</string>
    <string name="password_must_be_6_to_12_character">password must be 6 to 12 character</string>
    <string name="invalid_number">invalid number</string>
    <string name="password_dont_match">password doesn\'t match</string>
    <string name="travel_mate">Travel Mate</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>
    <string name="log_in">Log in</string>
    <string name="seperator">|</string>
    <string name="title_activity_map">map</string>
    <string name="please_give_your_rating">rate your travel mate</string>
    <string name="how_was_the_traveller">how was the traveller</string>
    <string name="how_was_the_passenger">how was the passenger</string>
    <string name="submit">Submit</string>
</resources>