<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_profile"
            android:icon="@drawable/icon_profile"
            android:title="@string/profile"/>
        <item android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/home"/>
    </group>
    <item android:title="@string/other">
        <menu>
            <item android:id="@+id/nav_about_us"
                android:icon="@drawable/icon_about_us"
                android:title="@string/about_us"/>
            <item android:id="@+id/nav_logout"
                android:icon="@drawable/icon_log_out"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>