<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/layout_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/MainMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/please_give_your_rating" />
        <TextView
            android:id="@+id/Question1"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="@string/how_was_the_traveller" />
        <TextView
            android:id="@+id/Question2"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:text="@string/how_was_the_passenger" />

        <RatingBar
            android:id="@+id/Rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:background="#c6eff9"
            tools:ignore="SpeakableTextPresentCheck" />
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:background="@drawable/button_bg_color"
            android:onClick="submit"/>
    </LinearLayout>



</LinearLayout>