<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:background="@drawable/layout_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/registration_page_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="23sp"
            android:layout_marginTop="25dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/registration_page_email_edittext"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/edit_txt_bg"
            android:inputType="textEmailAddress"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            tools:ignore="TextContrastCheck" />
        <TextView
            android:id="@+id/registration_page_email_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/registration_page_mobile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            android:textSize="23sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/registration_page_mobile_edittext"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/edit_txt_bg"
            android:inputType="number"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            tools:ignore="TextContrastCheck" />
        <TextView
            android:id="@+id/registration_page_mobile_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="23sp"
            android:textColor="@color/black"/>
        <RadioGroup
            android:id="@+id/registration_page2_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/registration_page2_male_radio"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/edit_txt_bg"
                android:text="@string/male"
                android:textSize="23sp"
                tools:ignore="TouchTargetSizeCheck" />
            <TextView
                android:layout_width="25dp"
                android:layout_height="30dp" />

            <RadioButton
                android:id="@+id/registration_page2_female_radio"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/edit_txt_bg"
                android:text="@string/female"
                android:textSize="23sp"
                tools:ignore="TouchTargetSizeCheck" />
        </RadioGroup>
        <TextView
            android:id="@+id/registration_page2_gender_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textSize="23sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/registration_page2_dob_edittext"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/edit_txt_bg"
            android:hint="@string/_01_01_20022"
            android:inputType="textPersonName"
            android:paddingStart="5dp"
            android:paddingEnd="50dp"
            android:drawableEnd="@drawable/icon_calender"
            android:onClick="dob_calender"
            tools:ignore="TextContrastCheck" />
        <TextView
            android:id="@+id/registration_page2_dob_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/registration_page2_current_address_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="15sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_pic"
                android:textSize="23sp"
                android:layout_marginBottom="20sp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optional"
                android:textSize="23sp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="20sp"
                android:textColor="#EFC9C9"/>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/registration_page2_profile_pic_imageview"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:contentDescription="@string/profile_pic"
                android:background="#DCD9D9"
                app:shapeAppearanceOverlay="@style/Circular"
                android:src="@drawable/icon_profile_pic"
                android:scaleType="centerCrop"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_bg_color"
                android:contentDescription="@string/profile_pic"
                android:onClick="profile_pic"
                android:src="@drawable/icon_pic_add"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
        </FrameLayout>

        <Button
            android:id="@+id/registration_page2_save_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_bg_color"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_marginBottom="20sp"
            android:onClick="save"/>

    </LinearLayout>

</ScrollView>