<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="77dp"
        android:text="@string/choose_user_type"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <RadioGroup
        android:id="@+id/user_selection_radio_group"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="259dp"
        android:layout_marginEnd="31dp"
        android:orientation="horizontal"
        android:background="@drawable/edit_txt_bg"
        >

        <RadioButton
            android:id="@+id/user_selection_traveller"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="traveller"
            android:textSize="23sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/seperator"
            android:textSize="40sp"/>

        <RadioButton
            android:id="@+id/user_selection_passenger"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="passenger"
            android:textSize="23sp" />

    </RadioGroup>

    <Button
        android:id="@+id/user_selection_next_btn"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="638dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_bg_color"
        android:text="@string/next"
        android:textSize="23sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:drawableEnd="@drawable/icon_next_arrow"/>

</RelativeLayout>