<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:shapeAppearanceOverlay="@style/Circular"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_profile"/>
        <TextView
            android:id="@+id/fragment_profile_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/fragment_profile_dob_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:layout_marginStart="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/fragment_profile_email_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:layout_marginStart="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/fragment_profile_mobile_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:layout_marginStart="10dp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>